<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hailort_yolo_common</name>
  <version>0.0.0</version>
  <description>The hailort_yolo_common package</description>
  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>LGPL v2.1 License</license>
  <author email="ray255ar@gmail.com">Ar-Ray-code</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>hailort</depend>
  <depend>libopencv-dev</depend>

  <exec_depend>usb_cam</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>